--- a/web/Mantenimiento/medicamento.xhtml
+++ b/web/Mantenimiento/medicamento.xhtml
@@ -9,33 +9,21 @@
         <!-- Esta pagina representa el panel de control principal de el administrador -->
 
         <meta charset="UTF-8"/>
-
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <!-- iconos de la pagina -->        
-        <link rel="Shortcut Icon" type="image/x-icon" href="../resources/assets/icons/book.ico" />
-        <!-- sweet alert de la pagina -->
-        <script src="../resources/js/sweet-alert.min.js"></script>
-        <!-- css sweet alert-->
-        <link rel="stylesheet" href="../resources/css/sweet-alert.css"/>
-        <!-- css Material desing -->
-        <link rel="stylesheet" href="../resources/css/material-design-iconic-font.min.css"/>
-        <!-- css normalize -->
-        <link rel="stylesheet" href="../resources/css/normalize.css"/>
-        <!-- css bootstrap -->
-        <link rel="stylesheet" href="../resources/css/bootstrap.min.css"/>
-        <!-- css para el scrow de la pagina -->
-        <link rel="stylesheet" href="../resources/css/jquery.mCustomScrollbar.css"/>
-        <!-- css estilo de la pagina -->
-        <link rel="stylesheet" href="../resources/css/style.css"/>
+        <link rel="Shortcut Icon" type="image/x-icon" href="../assets/icons/book.ico" />
 
-        <script src="../resources/js/jquery-1.11.2.min.js" type="text/javascript"></script>
-        <!-- js modernizer -->
+        <script src="../s/sweet-alert.min.js"></script>
+
+        <link rel="stylesheet" href="../resources/css/sweet-alert.css"/>
+        <link rel="stylesheet" href="../resources/css/material-design-iconic-font.min.css"/>
+        <link rel="stylesheet" href="../resources/css/normalize.css"/>
+        <link rel="stylesheet" href="../resources/css/bootstrap.min.css"/>
+
+        <link rel="stylesheet" href="../resources/css/jquery.mCustomScrollbar.css"/>
+        <link rel="stylesheet" href="../resources/css/style.css"/>
         <script src="../resources/js/modernizr.js"></script>
-        <!-- js de bootstrap -->
         <script src="../resources/js/bootstrap.min.js"></script>
-        <!-- js del scroll de la pagina -->
         <script src="../resources/js/jquery.mCustomScrollbar.concat.min.js"></script>
-        <!-- js del main-->
         <script src="../resources/js/main.js"></script>
 
     </h:head>
@@ -141,7 +129,7 @@
 
 
 
-            <div class="container-fluid">
+<!--            <div class="container-fluid">
                 <div class="container-flat-form">
                     <div class="title-flat-form title-flat-blue">Busqueda de Medicam</div>
                     <form autocomplete="off">
@@ -159,7 +147,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div>-->
 
 
             <div class="container-fluid">
@@ -170,9 +158,9 @@
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                                 <h:form>
 
-                                    <div class="group-material">
+<!--                                    <div class="group-material">
                                         <b:inputText id="Examen" style=" font: bold small-caps 120%/200% serif;" placeholder="Id:" value="#{bean_mantenimiento_medicamento.men.idmedicamento}" readonly="true"/>
-                                    </div>
+                                    </div>-->
 
                                     <div class="group-material">
                                         <b:inputText id="nombre" style=" font: bold small-caps 120%/200% serif;" placeholder="Nombre: " value="#{bean_mantenimiento_medicamento.men.nombre}"/>
@@ -182,7 +170,7 @@
                                         <b:inputText id="Descripcion" style=" font: bold small-caps 120%/200% serif;" placeholder="Descripcion: " value="#{bean_mantenimiento_medicamento.men.descripcion}"/>
                                     </div>
                                     <div class="group-material">
-                                        <b:inputText id="Fecha" style=" font: bold small-caps 120%/200% serif;" placeholder="Fecha de bencimiento: " value="#{bean_mantenimiento_medicamento.men.fecha}"/>
+                                        <b:dateTimePicker id="Fecha" style=" font: bold small-caps 120%/200% serif;" placeholder="Fecha de bencimiento: " value="#{bean_mantenimiento_medicamento.men.fecha}"/>
                                     </div>
 
                                     <div class="group-material">
