--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -183,6 +183,13 @@
                         <div class="tile-num full-reset">Recepcionista</div>
                     </a>
                 </article>
+                
+                <article class="tile">
+                    <a href="../faces/homes/homeMantenimiento.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/settings.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Mantenimiento</div>
+                    </a>
+                </article>
 
 
 
